# hm-kpdl

./: main.py  pyproject.toml
2-Preprocessing/Assignment/News_VNExpress_/: Preprocessing_News.ipynb
2-Preprocessing/Practice/: Data_Preprocessing.ipynb  clean_data.csv
3-Regression/Homework/: Regression_Homework.ipynb
3-Regression/Practice/Practice1/: Regression_Practice_1.ipynb
3-Regression/Practice/Practice2/: Regression_Practice_2.ipynb
4+5-k-mean/Kmeans-Homework/: KMeansHomework.ipynb
4+5-k-mean/Kmeans-Practice/: KMeans.ipynb
6-knn/Practice/: KNN_credit_risk.ipynb
docs/superpowers/plans/: 2026-05-27-preprocess-news.md  2026-05-27-regression-homework.md  2026-05-27-regression-practice-1.md  2026-05-27-regression-practice-2-solutions-plan.md  2026-05-31-kmeans-homework.md  2026-05-31-kmeans-practice.md
docs/superpowers/specs/: 2026-05-27-preprocess-news-design.md  2026-05-27-regression-homework-design.md  2026-05-27-regression-practice-1-design.md  2026-05-27-regression-practice-2-solutions-design.md  2026-05-31-kmeans-homework-implementation-design.md  2026-05-31-kmeans-practice-design.md
final/: test.json
