[project]
name = "hm-kpdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyvi>=0.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
